--- a/Part 1/AVFoundation Quick Start/Supporting Files/Info.plist
+++ b/Part 1/AVFoundation Quick Start/Supporting Files/Info.plist
@@ -39,5 +39,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Camera is necessary for testing purposes</string>
 </dict>
 </plist>
