--- a/Part 2/AVFoundation Quick Start Part 2/Supporting Files/Info.plist
+++ b/Part 2/AVFoundation Quick Start Part 2/Supporting Files/Info.plist
@@ -21,7 +21,11 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>Camera is necessary for testing purposes</string>
+	<string>Camera access is necessary for capturing photos</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Microphone access is necessary for capturing live photos with audio</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Photo Library access is neccessary for saving captured photos</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
