--- a/Part 1/AVFoundation Quick Start Part 1/Supporting Files/Info.plist
+++ b/Part 1/AVFoundation Quick Start Part 1/Supporting Files/Info.plist
@@ -21,7 +21,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>Camera is necessary for testing purposes</string>
+	<string>Camera access is necessary for testing purposes</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
